adding about page, managing css

--- a/about.html
+++ b/about.html
@@ -5,11 +5,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title> INST377Project </title>
 
-
-
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
-    <!--BootstrapCSS-->
+
 
 
   </head>
@@ -32,24 +30,20 @@
     <section class="hero">
       <div class="container">
         <div class="bkgrdimg">
-          <h1>Transparency in Government Spending</h1>
-            <div class="row">
-              <a class="button" href="./otherpage.html">Fiscal Year 17</a>
-              <a class="button" href="./otherpage.html">Fiscal Year 18</a>
-
-
-            </div>
+          <div class="about">
+            <h1>About our Product</h1>
+          </div>
         </div>
       </div>
     </section>
 
     <section class="intro padded">
       <div class="container">
-        <div class="row">
+        <div class="row-1">
           <div class="column-small">
             <img src="./img/computer.jpeg" alt="Stock">
           </div>
-          <div class="column-large">
+          <div class="column-large"</div>
             <h4>KNOWING HOW MUCH GOES WHERE</h5>
             <br>
             <h3><b>Using Real Data to Show Where
@@ -60,7 +54,23 @@ Spending is Going in Prince George’s County</b></h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a massa id erat sollicitudin sollicitudin at quis lorem.</p>
           </div>
         </div>
-
+        <div class ="second">
+        <div class="row">
+          <div class="coleft">
+            <h4>KNOWING HOW MUCH GOES WHERE</h5>
+            <br>
+            <h3><b>Using Real Data to Show Where
+Spending is Going in Prince George’s County</b></h3>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a massa id erat sollicitudin sollicitudin at quis lorem. Integer eu dui a odio tincidunt iaculis non vel lectus. In imperdiet commodo erat at commodo.</p>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a massa id erat sollicitudin sollicitudin at quis lorem.</p>
+          </div>
+          <div class="colright"</div>
+            <img src="./img/pennies.jpeg" alt="Stock">
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="footer">
