Added Fiscal Pages

--- a/fiscal18.html
+++ b/fiscal18.html
@@ -32,35 +32,19 @@
     <section class="hero">
       <div class="container">
         <div class="bkgrdimg">
-          <h1>Transparency in Government Spending</h1>
-            <div class="row">
-              <a class="button" href="fiscal17.html">Fiscal Year 17</a>
-              <a class="button" href="fiscal18.html">Fiscal Year 18</a>
-
-
-            </div>
+          <div class="fiscaltitle">
+            <h1>Fiscal Spending for 2018</h1>
+          </div>
         </div>
       </div>
     </section>
 
     <section class="intro padded">
       <div class="container">
-        <div class="row">
-          <div class="column-small">
-            <img src="./img/computer.jpeg" alt="Stock">
-          </div>
-          <div class="column-large">
-            <h4>KNOWING HOW MUCH GOES WHERE</h5>
-            <br>
-            <h3><b>Using Real Data to Show Where
-Spending is Going in Prince George’s County</b></h3>
-            <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a massa id erat sollicitudin sollicitudin at quis lorem. Integer eu dui a odio tincidunt iaculis non vel lectus. In imperdiet commodo erat at commodo.</p>
-            <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a massa id erat sollicitudin sollicitudin at quis lorem.</p>
-          </div>
-        </div>
 
+      <!--Put graph code here -->
+
+      </div>
     </section>
 
     <section class="footer">
