--- a/about.html
+++ b/about.html
@@ -20,7 +20,6 @@
             <div class="links">
               <a href="about.html">About</a>
               <a href="otherpage.html">Documentation</a>
-              <a href="otherpage.html">FAQ</a>
           </div>
         </div>
       <hr/>
@@ -44,27 +43,17 @@
             <img src="./img/computer.jpeg" alt="Stock">
           </div>
           <div class="column-large"</div>
-            <h4>KNOWING HOW MUCH GOES WHERE</h5>
+            <h3><b>The information problem</b></h3>
             <br>
-            <h3><b>Using Real Data to Show Where
-Spending is Going in Prince George’s County</b></h3>
-            <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a massa id erat sollicitudin sollicitudin at quis lorem. Integer eu dui a odio tincidunt iaculis non vel lectus. In imperdiet commodo erat at commodo.</p>
-            <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a massa id erat sollicitudin sollicitudin at quis lorem.</p>
+            <p>Government contracting companies and entrepreneurs in Prince George’s County need to find more information regarding what the counties are focusing their money towards and what agencies/departments are getting less funding. This information is pertinent as government contracting companies want to provide services that the government can purchase to fulfill their needs and achieve their missions. </p>
           </div>
         </div>
         <div class ="second">
         <div class="row">
           <div class="coleft">
-            <h4>KNOWING HOW MUCH GOES WHERE</h5>
+            <h3><b>Our Project</b></h3>
             <br>
-            <h3><b>Using Real Data to Show Where
-Spending is Going in Prince George’s County</b></h3>
-            <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a massa id erat sollicitudin sollicitudin at quis lorem. Integer eu dui a odio tincidunt iaculis non vel lectus. In imperdiet commodo erat at commodo.</p>
-            <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a massa id erat sollicitudin sollicitudin at quis lorem.</p>
+            <p>Our solution addresses the problem because it provides a web application in which someone who wants to gain information about government spending in Prince George’s County has an easy way to compare data side by side. A government contractor or entrepreneur can select from the various departments within the county government and then either select another department to compare spending on, or compare the same department but from a different fiscal year. This is helpful because comparing the difference in spending for fiscal years can indicate if the spending has increased, decreased, or remained stagnant. Also, comparing different departments can indicate if one is more valued than another, or if more resources are needed for one compared to another. </p>
           </div>
           <div class="colright"</div>
             <img src="./img/pennies.jpeg" alt="Stock">
