--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <div class="links">
               <a href="about.html">About</a>
               <a href="otherpage.html">Documentation</a>
-              <a href="otherpage.html">FAQ</a>
           </div>
         </div>
       <hr/>
@@ -55,9 +54,7 @@
             <h3><b>Using Real Data to Show Where
 Spending is Going in Prince George’s County</b></h3>
             <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a massa id erat sollicitudin sollicitudin at quis lorem. Integer eu dui a odio tincidunt iaculis non vel lectus. In imperdiet commodo erat at commodo.</p>
-            <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a massa id erat sollicitudin sollicitudin at quis lorem.</p>
+            <p>Our web application allows you to get information about government spending in Prince George’s County Maryland and compare that data to the spending in other departments and from fiscal year 17 (FY17) and fiscal year 18 (FY18). This helps you see which departments have the most or least spending and analyze the changes between years or the differences between departments. </p>
           </div>
         </div>
 
