--- a/about.html
+++ b/about.html
@@ -65,9 +65,9 @@
     <section class="footer">
 
       <!-- <div class="row"> -->
-          <a href="otherpage.html">Help</a>
-          <a href="otherpage.html">Privacy</a>
-          <a href="otherpage.html">Terms of Service</a>
+          <a href="index.html">Help</a>
+          <a href="index.html">Privacy</a>
+          <a href="index.html">Terms of Service</a>
       <!--  </div> -->
       </div>
     </section>
