--- a/fiscal18.html
+++ b/fiscal18.html
@@ -49,9 +49,9 @@
     <section class="footer">
 
       <!-- <div class="row"> -->
-          <a href="otherpage.html">Help</a>
-          <a href="otherpage.html">Privacy</a>
-          <a href="otherpage.html">Terms of Service</a>
+          <a href="index.html">Help</a>
+          <a href="index.html">Privacy</a>
+          <a href="index.html">Terms of Service</a>
       <!--  </div> -->
       </div>
     </section>
