--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ Spending is Going in Prince George’s County</b></h3>
     <section class="footer">
 
       <!-- <div class="row"> -->
-          <a href="otherpage.html">Help</a>
-          <a href="otherpage.html">Privacy</a>
-          <a href="otherpage.html">Terms of Service</a>
+          <a href="index.html">Help</a>
+          <a href="index.html">Privacy</a>
+          <a href="index.html">Terms of Service</a>
       <!--  </div> -->
       </div>
     </section>
