Fiscal Button Changes

--- a/fiscal.html
+++ b/fiscal.html
@@ -32,7 +32,11 @@
       <div class="container">
         <div class="bkgrdimg">
           <div class="fiscaltitle">
-            <h1>Fiscal Spending for 2017</h1>
+            <h1>Fiscal Spending Data</h1>
+              <div class="row">
+                <a class="button" href="fiscal.html">Fiscal Year 2017</a>
+                <a class="button" href="fiscal.html">Fiscal Year 2018</a>
+              </div>
           </div>
         </div>
       </div>
