--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
         <div class="bkgrdimg">
           <h1>Transparency in Government Spending</h1>
             <div class="row">
-              <a class="button" href="fiscal17.html">Fiscal Year 17</a>
-              <a class="button" href="fiscal18.html">Fiscal Year 18</a>
-
-
+              <a class="button" href="fiscal.html">Take Me to the Data</a>
             </div>
         </div>
       </div>
